# mini-rpc

./: .gitignore  CMakeLists.txt  README.md  build.sh  function.cmake
cmake/: mrpc.cmake
docs/: getting_started.md  overview.md  protobuf.md
example/: CMakeLists.txt  example.proto  example_json.cpp
example/message/: CMakeLists.txt  json.cpp  message_example.proto  stl.cpp
example/service/: CMakeLists.txt  async_client.cpp  client.json  server.cpp  server.json  service_example.proto  sync_client.cpp
mrpc/: CMakeLists.txt  config.h.in  error_code.proto  options.proto
mrpc/message/: common.proto  descriptor.cpp  descriptor.h  descriptor_internal.h  json.cpp  json.h  message.cpp  message.h  message_internal.cpp  message_internal.h  reflection.cpp  reflection.h  reflection_internal.h
mrpc/service/: application.cpp  application.h  application_config.proto  callback.cpp  callback.h  context.cpp  context.h  endpoint.cpp  endpoint.h  global_proxy.cpp  global_proxy.h  network_client.cpp  network_client.h  network_service.cpp  network_service.h  protocol.cpp  protocol.h  protocol.proto  service.h  service_bridge.cpp  service_bridge.h  service_factory.cpp  service_factory.h  service_stub.cpp  service_stub.h
mrpc/util/: log.cpp  log.h  log.proto  noncopyable.h  string.cpp  string.h  thread_safe_queue.h  time.cpp  time.h
protoc_plugin/: CMakeLists.txt  cpp_class.cpp  cpp_class.h  cpp_enum.cpp  cpp_enum.h  cpp_field.cpp  cpp_field.h  cpp_file.cpp  cpp_file.h  cpp_method.cpp  cpp_method.h  cpp_plugin_main.cpp  cpp_service.cpp  cpp_service.h  plugin_helper.cpp  plugin_helper.h
test/: CMakeLists.txt
test/message/: CMakeLists.txt  bytesize_unittest.cpp  compatibility_test.cpp  message_unittest.cpp  mine.proto  parse_unittest.cpp  pb.proto  reflection_unittest.cpp  serialize_unittest.cpp
test/util/: CMakeLists.txt  string_unittest.cpp
